--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -167,7 +167,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+
+            <include
+                android:id="@+id/network_error"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                layout="@layout/tamplate_netword_error"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationDrawer"
             android:layout_width="wrap_content"
