--- a/app/src/main/res/layout/activity_add_address_map.xml
+++ b/app/src/main/res/layout/activity_add_address_map.xml
@@ -70,8 +70,7 @@
             tools:layout="com.google.android.gms.maps.SupportMapFragment"
             android:id="@+id/mapView2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
