--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,6 @@
                 <!--            />-->
 
                 <LinearLayout
-                    android:id="@+id/error_tamplate"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -169,9 +168,10 @@
             </LinearLayout>
 
             <include
-                android:id="@+id/network_error"
+                android:id="@+id/tamplate_netword_error"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+
                 layout="@layout/tamplate_netword_error"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
