--- a/app/src/main/res/layout/bottom_navbar.xml
+++ b/app/src/main/res/layout/bottom_navbar.xml
@@ -8,7 +8,7 @@
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="55dp">
 
     <View
         android:id="@+id/divider"
@@ -19,7 +19,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingVertical="2dp"
+
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -32,10 +32,12 @@
             android:layout_weight="1">
             <androidx.cardview.widget.CardView
                 android:id="@+id/filterIcon"
-                android:layout_width="50dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                app:cardCornerRadius="25dp"
+                app:cardCornerRadius="10dp"
                 android:clickable="true"
+
+
                 android:foreground="?attr/selectableItemBackground"
                 app:cardElevation="0dp">
 
@@ -85,14 +87,15 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:layout_weight="1">
             <androidx.cardview.widget.CardView
                 android:id="@+id/mapIcon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:cardCornerRadius="25dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="10dp"
+
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackground"
                 app:cardElevation="0dp">
@@ -109,15 +112,15 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
 
             android:layout_weight="1">
             <androidx.cardview.widget.CardView
                 android:id="@+id/searchIcon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:cardCornerRadius="25dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="10dp"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackground"
                 app:cardElevation="0dp">
