--- a/app/src/main/res/layout/tamplate_netword_error.xml
+++ b/app/src/main/res/layout/tamplate_netword_error.xml
@@ -7,6 +7,7 @@
     android:id="@+id/layout"
     android:background="@color/white"
     android:gravity="center_horizontal"
+    android:visibility="gone"
     android:orientation="vertical">
 
 
