--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -4,289 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <data>
-        <variable
-            name="restaurant"
-            type="com.example.mealmoverskotlin.data.models.RestaurantModel" />
-    </data>
-
-    <LinearLayout
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/mainLayout"
+        <FrameLayout
+            android:id="@+id/fragment_layout"
+            class="fragment_"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-
-            >
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:context=".restaurantPages.RestaurantPage">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:padding="7dp"
-                    android:visibility="gone">
-
-
-                    <ImageView
-                        android:id="@+id/arrowBack1"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_arrow_back_24" />
-
-                    <TextView
-                        android:id="@+id/textView16"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="SushiBar"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                        android:textSize="22sp" />
-
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="35dp"
-                        android:layout_height="30dp"
-
-                        android:src="@drawable/ic_baseline_more_vert_24" />
-
-                </LinearLayout>
-
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp">
-
-                    <ImageView
-                        android:id="@+id/resImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food_image"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <LinearLayout
-                        android:id="@+id/arrowBack"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@android:color/transparent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:padding="8dp"
-                        android:gravity="center_vertical"
-                        app:layout_constraintTop_toTopOf="parent">
-
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="38dp"
-                            android:layout_height="38dp"
-                            app:cardBackgroundColor="#BA201F1F"
-                            app:cardCornerRadius="20dp"
-                            android:clickable="true"
-                            android:foreground="?attr/selectableItemBackground"
-                            app:cardElevation="0dp">
-
-
-                            <ImageView
-
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:layout_gravity="center"
-                                android:src="@drawable/arrow_back_white" />
-                        </androidx.cardview.widget.CardView>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/button2"
-                        android:orientation="horizontal"
-                        android:padding="4dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-
-                        <TextView
-                            android:id="@+id/textView17"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-
-                            android:text="DELIVERY: "
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/delCost"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-
-                            android:text="@{restaurant.deliveryPrice + `€`}"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingHorizontal="10dp"
-                    android:paddingTop="10dp">
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@={restaurant.name}"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                        android:textSize="24sp" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        app:cardBackgroundColor="#eeeeee"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="20dp"
-                        android:clickable="true"
-                        android:foreground="?attr/selectableItemBackground"
-                        >
-
-
-                        <ImageView
-                            android:id="@+id/whiteHeart"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_baseline_favorite_border_24" />
-
-                    </androidx.cardview.widget.CardView>
-
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/textView20"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:text="TextVie asjodha ahasdasbfakpodkaj onja s vnoansdv wasd dkjsf dfg" />
-
-                <View
-                    android:id="@+id/divider5"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="?android:attr/listDivider" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="14dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/menu_search_background"
-                    android:padding="7dp">
-
-                    <ImageView
-                        android:id="@+id/imageView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:src="@drawable/ic_baseline_search_24" />
-
-                    <EditText
-                        android:id="@+id/searchItemBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:background="#eeeeee"
-                        android:ems="10"
-                        android:layout_gravity="center_vertical"
-                        android:textSize="15sp"
-                        android:hint="@{`Search ` + restaurant.name}"
-                        android:inputType="textPersonName" />
-                </LinearLayout>
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp" />
-            </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
-
-        <LinearLayout
-            android:id="@+id/checkoutButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/teal_200"
-            android:padding="15dp"
-            android:visibility="gone"
-            android:gravity="center_vertical"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-
-            <LinearLayout
-                android:id="@+id/minus_icon"
-                android:layout_width="20dp"
-                android:gravity="center"
-                android:layout_height="20dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/quantatiy_button">
-
-                <TextView
-                    android:id="@+id/cartQuantity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1" />
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Go to checkout"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/cartPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10€"
-                android:textSize="16sp" />
-        </LinearLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 
-    </LinearLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
