--- a/app/src/main/res/layout/tamplate_netword_error.xml
+++ b/app/src/main/res/layout/tamplate_netword_error.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<layout>
+
+
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +13,7 @@
     android:id="@+id/layout"
     android:background="@color/white"
     android:gravity="center_horizontal"
-    android:visibility="gone"
+
     android:orientation="vertical">
 
 
@@ -71,3 +77,7 @@
 
 
 </LinearLayout>
+
+
+
+</layout>
