--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="loading"
+            type="Boolean" />
+
+        <variable
+            name="error"
+            type="Boolean" />
+    </data>
+
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
@@ -21,6 +32,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
 
+                android:visibility="@{loading ? View.GONE: View.VISIBLE}"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,15 +50,6 @@
                     android:layout_height="1dp"
                     android:background="?android:attr/listDivider" />
 
-
-                <!--        <include-->
-                <!--            android:id="@+id/error_tamplate"-->
-                <!--            android:layout_width="match_parent"-->
-                <!--            android:layout_height="match_parent"-->
-                <!--            android:layout_weight="1"-->
-                <!--            android:visibility="visible"-->
-                <!--            layout="@layout/error_tamplate"-->
-                <!--            />-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -152,7 +156,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:visibility="gone"
+                android:visibility="@{loading ? View.VISIBLE:View.GONE}"
                 android:clickable="true"
                 android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -172,6 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 layout="@layout/tamplate_netword_error"
+                android:visibility="@{error?View.VISIBLE: View.GONE }"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
