--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <LinearLayout
         android:id="@+id/mainLayout"
@@ -11,18 +15,22 @@
         android:layout_height="match_parent"
 
         android:background="@drawable/background_image_welcome_page"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/arrowBack"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            app:cardBackgroundColor="@null"
-            app:cardCornerRadius="18dp"
             android:layout_margin="15dp"
-            android:visibility="gone"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
+            android:visibility="gone"
+            app:cardBackgroundColor="@null"
+            app:cardCornerRadius="18dp"
             app:cardElevation="0dp">
 
 
@@ -40,10 +48,11 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical">
+
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/TopHeaderText"
@@ -67,8 +76,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-
+                android:layout_weight="1" />
 
 
             <LinearLayout
@@ -89,14 +97,13 @@
                     android:textSize="15sp" />
 
 
-
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
+                    android:background="@null"
                     android:backgroundTint="@android:color/transparent"
-                    android:inputType="textEmailAddress"
-                    android:background="@null"/>
+                    android:inputType="textEmailAddress" />
 
                 <View
 
@@ -111,8 +118,8 @@
                 android:id="@+id/password_ED_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_marginTop="30dp"
+                android:orientation="vertical"
                 android:paddingHorizontal="22dp">
 
 
@@ -128,20 +135,19 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
 
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password_edit_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:inputType="textPassword"
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/password_edit_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@android:color/transparent"
-                            android:inputType="textPassword"
-
-                           />
+                        />
 
 
                     <ImageView
@@ -179,13 +185,13 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                app:cardElevation="0dp"
-                app:cardCornerRadius="20dp"
                 android:layout_marginHorizontal="70dp"
+                android:layout_marginTop="50dp"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackground"
-                android:layout_marginTop="50dp"
-                app:cardBackgroundColor="@color/teal_200">
+                app:cardBackgroundColor="@color/teal_200"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp">
 
 
                 <TextView
@@ -218,15 +224,16 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginBottom="50dp"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/textView43"
                     android:layout_width="wrap_content"
@@ -238,10 +245,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="3dp"
-                    android:text="Register now"
-                    android:textColor="@color/white"
                     android:clickable="true"
                     android:foreground="?attr/selectableItemBackground"
+                    android:text="Register now"
+                    android:textColor="@color/white"
                     android:textSize="15sp" />
 
 
@@ -251,6 +258,25 @@
         </LinearLayout>
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#5E222222"
+        android:clickable="true"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+
+            />
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
