--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,16 @@
         <item name="android:windowExitAnimation">@anim/slide_scale_out</item>
     </style>
 
+    <style name="Theme.MealMoversKotlin.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MealMoversKotlin.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="Theme.MealMoversKotlin.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
