--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -143,7 +143,7 @@
 
                             <TextView
                                 android:id="@+id/phone_number"
-
+                               android:visibility="@{address.phoneNumber ==``? View.GONE:View.VISIBLE}"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@{address.phoneNumber}"  />
