--- a/app/src/main/res/layout/fragment_select_address_from_map.xml
+++ b/app/src/main/res/layout/fragment_select_address_from_map.xml
@@ -67,7 +67,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
-                tools:context=".ui.address.AddAddressMapActivity"/>
+                tools:context=".ui.address.AddressActivity"
+                />
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
